// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test: Main component should render correctly 1`] = `
<div
  className="page page--gray page--main"
>
  <header
    className="header"
  >
    <div
      className="container"
    >
      <div
        className="header__wrapper"
      >
        <div
          className="header__left"
        >
          <a
            className="header__logo-link header__logo-link--active"
          >
            <img
              alt="6 cities logo"
              className="header__logo"
              height="41"
              src="img/logo.svg"
              width="81"
            />
          </a>
        </div>
        <nav
          className="header__nav"
        >
          <ul
            className="header__nav-list"
          >
            <li
              className="header__nav-item user"
            >
              <a
                className="header__nav-link header__nav-link--profile"
                href="#"
              >
                <div
                  className="header__avatar-wrapper user__avatar-wrapper"
                />
                <span
                  className="header__user-name user__name"
                >
                  Oliver.conner@gmail.com
                </span>
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </header>
  <main
    className="page__main page__main--index "
  >
    <h1
      className="visually-hidden"
    >
      Cities
    </h1>
    <CityList
      activeCity="Amsterdam"
      onClick={[Function]}
    />
    <div
      className="cities"
    >
      <div
        className="cities__places-container  container"
      >
        <section
          className="cities__places places"
        >
          <h2
            className="visually-hidden"
          >
            Places
          </h2>
          <b
            className="places__found"
          >
            1
             places to stay in 
            Amsterdam
          </b>
          <WithActiveState
            activeType="popular"
            onTypeChange={[Function]}
          />
          <OfferList
            blockClassName="cities"
            offers={
              Array [
                Object {
                  "city": Object {
                    "location": Object {
                      "coordinates": Array [
                        4,
                        4,
                      ],
                      "zoom": 4,
                    },
                  },
                  "id": "4",
                  "isFavorite": false,
                  "isPremium": false,
                  "location": Object {
                    "coordinates": Array [
                      4,
                      4,
                    ],
                  },
                  "mainPhoto": "photo",
                  "name": "Paper place",
                  "price": 4,
                  "rating": 4,
                  "type": "room",
                },
              ]
            }
            onOfferCardMouseEnter={[Function]}
            onOfferCardMouseLeave={[Function]}
            onOfferCardNameClick={[Function]}
          />
        </section>
        <div
          className="cities__right-section"
        >
          <WithMarkers
            activeMarkerCoordinates={
              Array [
                Array [
                  4,
                  4,
                ],
              ]
            }
            blockClassName="cities"
            centerCoordinates={
              Array [
                4,
                4,
              ]
            }
            markerCoordinates={Array []}
            zoom={4}
          />
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`snapshot test: Main component should render message without offers 1`] = `
<div
  className="page page--gray page--main"
>
  <header
    className="header"
  >
    <div
      className="container"
    >
      <div
        className="header__wrapper"
      >
        <div
          className="header__left"
        >
          <a
            className="header__logo-link header__logo-link--active"
          >
            <img
              alt="6 cities logo"
              className="header__logo"
              height="41"
              src="img/logo.svg"
              width="81"
            />
          </a>
        </div>
        <nav
          className="header__nav"
        >
          <ul
            className="header__nav-list"
          >
            <li
              className="header__nav-item user"
            >
              <a
                className="header__nav-link header__nav-link--profile"
                href="#"
              >
                <div
                  className="header__avatar-wrapper user__avatar-wrapper"
                />
                <span
                  className="header__user-name user__name"
                >
                  Oliver.conner@gmail.com
                </span>
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </header>
  <main
    className="page__main page__main--index page__main--index-empty"
  >
    <h1
      className="visually-hidden"
    >
      Cities
    </h1>
    <CityList
      activeCity="Amsterdam"
      onClick={[Function]}
    />
    <div
      className="cities"
    >
      <div
        className="cities__places-container cities__places-container--empty container"
      >
        <NoOffersMessage
          activeCity="Amsterdam"
        />
        <div
          className="cities__right-section"
        />
      </div>
    </div>
  </main>
</div>
`;
